--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,7 @@ task myJavadocs(type: Javadoc) {
 }
 
 repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
@@ -47,13 +45,16 @@ dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:26.0-jre'
+    implementation 'com.google.guava:guava:31.0.1-jre'
 
     // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.codehaus.groovy:groovy-all:2.4.5'
-    testImplementation 'org.spockframework:spock-core:1.0-groovy-2.4'
-    testImplementation 'pl.pragmatists:JUnitParams:1.0.5'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.codehaus.groovy:groovy-all:3.0.8'
+    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
+    testImplementation 'pl.pragmatists:JUnitParams:1.1.1'
 
 }
+
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
